--- a/scilab/modules/optimization/locales/en_US/optimization.pot
+++ b/scilab/modules/optimization/locales/en_US/optimization.pot
@@ -14,7 +14,7 @@ msgstr ""
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=ISO-8859-1\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Revision-Date: 2009-11-09 14:22+0100\n"
+"Revision-Date: 2009-11-17 16:13+0100\n"
 
 # File: src/c/sp.c, line: 468
 msgid ""
@@ -27,7 +27,7 @@ msgstr ""
 msgid " number of of constraints (%s)'),'lmisolver',%m,%fm));"
 msgstr ""
 #
-# File: macros/neldermead/neldermead_search.sci, line: 909
+# File: macros/neldermead/neldermead_search.sci, line: 913
 #, c-format
 msgid "%s: %s"
 msgstr ""
@@ -98,30 +98,30 @@ msgstr ""
 msgid "%s: Empty function (use -function option)."
 msgstr ""
 #
-# File: macros/neldermead/neldermead_configure.sci, line: 224
-# File: macros/optimbase/optimbase_configure.sci, line: 139
 # File: macros/optimsimplex/optimsimplex_new.sci, line: 590
+# File: macros/optimbase/optimbase_configure.sci, line: 139
+# File: macros/neldermead/neldermead_configure.sci, line: 224
 #, c-format
 msgid "%s: Expected boolean but got %s instead"
 msgstr ""
 #
-# File: macros/neldermead/neldermead_configure.sci, line: 217
-# File: macros/optimbase/optimbase_configure.sci, line: 132
 # File: macros/optimsimplex/optimsimplex_new.sci, line: 583
+# File: macros/optimbase/optimbase_configure.sci, line: 132
+# File: macros/neldermead/neldermead_configure.sci, line: 217
 #, c-format
 msgid "%s: Expected function but got %s instead"
 msgstr ""
 #
-# File: macros/neldermead/neldermead_configure.sci, line: 203
-# File: macros/optimbase/optimbase_configure.sci, line: 118
 # File: macros/optimsimplex/optimsimplex_new.sci, line: 569
+# File: macros/optimbase/optimbase_configure.sci, line: 118
+# File: macros/neldermead/neldermead_configure.sci, line: 203
 #, c-format
 msgid "%s: Expected real variable but got %s instead"
 msgstr ""
 #
-# File: macros/neldermead/neldermead_configure.sci, line: 210
-# File: macros/optimbase/optimbase_configure.sci, line: 125
 # File: macros/optimsimplex/optimsimplex_new.sci, line: 576
+# File: macros/optimbase/optimbase_configure.sci, line: 125
+# File: macros/neldermead/neldermead_configure.sci, line: 210
 #, c-format
 msgid "%s: Expected string variable but got %s instead"
 msgstr ""
@@ -132,21 +132,26 @@ msgstr ""
 msgid "%s: History disabled ; enable -storehistory option."
 msgstr ""
 #
-# File: macros/neldermead/neldermead_get.sci, line: 21
-# File: macros/optimbase/optimbase_histget.sci, line: 21
 # File: macros/optimbase/optimbase_histset.sci, line: 22
+# File: macros/optimbase/optimbase_histget.sci, line: 21
 # File: macros/optimbase/optimbase_set.sci, line: 26
 # File: macros/optimbase/optimbase_set.sci, line: 33
+# File: macros/neldermead/neldermead_get.sci, line: 21
 #, c-format
 msgid "%s: History disabled ; turn on -storehistory option."
 msgstr ""
 #
 # File: macros/neldermead/neldermead_updatesimp.sci, line: 80
-# File: macros/neldermead/neldermead_search.sci, line: 996
-# File: macros/neldermead/neldermead_search.sci, line: 1040
+# File: macros/neldermead/neldermead_search.sci, line: 1005
+# File: macros/neldermead/neldermead_search.sci, line: 1049
 #, c-format
 msgid ""
 "%s: Impossible to scale the vertex #%d/%d at [%s] into inequality constraints"
+msgstr ""
+#
+# File: macros/neldermead/neldermead_search.sci, line: 956
+#, c-format
+msgid "%s: Initial guess [%s] is not feasible."
 msgstr ""
 #
 # File: macros/fit_dat.sci, line: 100
@@ -233,7 +238,7 @@ msgstr ""
 msgid "%s: Order must be 1, 2 or 4.\n"
 msgstr ""
 #
-# File: macros/neldermead/neldermead_search.sci, line: 415
+# File: macros/neldermead/neldermead_search.sci, line: 418
 #, c-format
 msgid "%s: Problem has constraints, but fixed algorithm ignores them."
 msgstr ""
@@ -243,7 +248,7 @@ msgstr ""
 msgid "%s: Problem has constraints, but variable algorithm ignores them."
 msgstr ""
 #
-# File: macros/neldermead/neldermead_search.sci, line: 1168
+# File: macros/neldermead/neldermead_search.sci, line: 1177
 #, c-format
 msgid "%s: Problem has no constraints, but Box algorithm is designed for them."
 msgstr ""
@@ -254,7 +259,7 @@ msgid "%s: Q is not symmetric positive definite.\n"
 msgstr ""
 #
 # File: macros/neldermead/neldermead_updatesimp.sci, line: 42
-# File: macros/neldermead/neldermead_search.sci, line: 935
+# File: macros/neldermead/neldermead_search.sci, line: 939
 #, c-format
 msgid "%s: Randomized bounds initial simplex is not available without bounds."
 msgstr ""
@@ -508,14 +513,14 @@ msgstr ""
 msgid "%s: Unknown -method %s"
 msgstr ""
 #
-# File: macros/neldermead/nmplot_configure.sci, line: 25
-# File: macros/optimbase/optimbase_histget.sci, line: 34
-# File: macros/optimbase/optimbase_histset.sci, line: 35
-# File: macros/optimbase/optimbase_get.sci, line: 49
-# File: macros/optimbase/optimbase_configure.sci, line: 111
-# File: macros/optimbase/optimbase_cget.sci, line: 65
-# File: macros/optimbase/optimbase_set.sci, line: 43
 # File: macros/optimsimplex/optimsimplex_new.sci, line: 193
+# File: macros/optimbase/optimbase_histset.sci, line: 35
+# File: macros/optimbase/optimbase_cget.sci, line: 65
+# File: macros/optimbase/optimbase_histget.sci, line: 34
+# File: macros/optimbase/optimbase_set.sci, line: 43
+# File: macros/optimbase/optimbase_configure.sci, line: 111
+# File: macros/optimbase/optimbase_get.sci, line: 49
+# File: macros/neldermead/nmplot_configure.sci, line: 25
 #, c-format
 msgid "%s: Unknown key %s"
 msgstr ""
@@ -525,7 +530,7 @@ msgstr ""
 msgid "%s: Unknown method %s"
 msgstr ""
 #
-# File: macros/neldermead/neldermead_search.sci, line: 811
+# File: macros/neldermead/neldermead_search.sci, line: 815
 #, c-format
 msgid "%s: Unknown restart detection %s"
 msgstr ""
@@ -550,18 +555,18 @@ msgstr ""
 msgid "%s: Unknown step %s"
 msgstr ""
 #
-# File: macros/neldermead/neldermead_configure.sci, line: 232
 # File: macros/optimbase/optimbase_configure.sci, line: 145
+# File: macros/neldermead/neldermead_configure.sci, line: 232
 #, c-format
 msgid "%s: Unknown value %s for %s option"
 msgstr ""
 #
-# File: macros/neldermead/neldermead_search.sci, line: 956
+# File: macros/neldermead/neldermead_search.sci, line: 965
 #, c-format
 msgid "%s: Unknown value %s for -scalingsimplex0 option"
 msgstr ""
 #
-# File: macros/neldermead/neldermead_search.sci, line: 941
+# File: macros/neldermead/neldermead_search.sci, line: 945
 #, c-format
 msgid "%s: Unknown value %s for -simplex0method option"
 msgstr ""
